--- a/index (1).html
+++ b/index (1).html
@@ -9,7 +9,7 @@
     <!-- This is an SEO Change -->
     <meta name="keywords" content="Manage and track expenses">
     <!-- This is an SEO Change -->
-    <meta name="author" content="Sai Goda">
+    <meta name="author" content="Sai Priya">
     <!-- This is an SEO Change -->
     <meta property="og:title" content="personal-budget App"/>
     <link rel="stylesheet" href="/reset.css">
@@ -139,7 +139,7 @@
     <!-- This is an A11y Change -->
     <footer class="bottom" role="contentinfo">
         <div class="center">
-            All rights reserved &copy; Sai Goda
+            All rights reserved &copy; Sai priya
         </div>
     </footer>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js" integrity="sha512-aoTNnqZcT8B4AmeCFmiSnDlc4Nj/KPaZyB5G7JnOnUEkdNpCZs1LCankiYi01sLTyWy+m2P+W4XM+BuQ3Q4/Dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
